# renderer

./: .gitignore  CMakeLists.txt  Canvas.h  Common.h  Light.h  Material.cpp  Material.h  Object.cpp  Object.h  README.md  Ray.h  Scene.cpp  Scene.h  Utility.h  clean.sh  main.cpp
scenes/: cornell.h  default.h  depth_of_field.h  environment_lighting.h  metallic.h
